Closed Bug 1644452 Opened 5 years ago Closed 5 years ago

mozilla::dom::DOMArena::Release() should be called on the main thread instead of from ~DocGroup

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox77 --- wontfix
firefox78 --- fixed
firefox79 --- fixed

People

(Reporter: farre, Assigned: farre)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

DOMArena isn't thread safe, but DocGroup is and hence DOMArena needs to be release on the main thread in the case where DocGroup is destroyed off main thread. This causes assertions like:

https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=304507291&repo=autoland&lineNumber=6743-6800

Regressed by: 1377999
Has Regression Range: --- → yes
Assignee: nobody → afarre
Severity: -- → S3
Priority: -- → P2

Comment on attachment 9155289 [details]
Bug 1644452 - Release DocGroup::mArena on the DocGroup's event target. r=smaug

Beta/Release Uplift Approval Request

  • User impact if declined: Buggy behaviour
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small change
  • String changes made/needed:
Attachment #9155289 - Flags: approval-mozilla-beta?
Pushed by afarre@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c1d5a016149 Release DocGroup::mArena on the DocGroup's event target. r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Comment on attachment 9155289 [details]
Bug 1644452 - Release DocGroup::mArena on the DocGroup's event target. r=smaug

Correctness fix for a bug causing assertion failures. Approved for 78.0b6.

Attachment #9155289 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: