Bug 1644452 - Release DocGroup::mArena on the DocGroup's event target. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D78907